--- a/style.css
+++ b/style.css
@@ -13,10 +13,17 @@ body {
     margin-top: 40px;
     background: white;
     border-radius: 5px;
+    text-align: center;
 }
+
+.container h2 {
+    text-align: center;
+}
+
 
 form {
     display: inline-block;
+    
 }
 
 input{
@@ -29,7 +36,7 @@ input{
     color:#ffffff;
     border-radius: 5px;
     text-align:center;
-    margin-top:2px;
+    margin-top: 2px;
     padding: 5px 15px;
 }
 
